<resources>
    <string name="app_name">E-Multiquizzes</string>
    <string name="welcome_to_quiz_app">Welcome To quiz app</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_up_for_free">sign-up for free</string>
    <string name="login">Login</string>
    <string name="Registrtion_Form">Registrtion Form </string>
    <string name="registrtion_form">Registrtion Form</string>
    <string name="tel">tel :</string>
    <string name="password_Reg">Password</string>
    <string name="password_validate">Password :</string>
    <string name="re_enter_your_password">re-enter your password</string>
    <string name="re_enter_password">Re Enter Password :</string>
    <string name="sign_up">Sign up</string>
    <string name="return_to_login_page">return to login page</string>
    <string name="Enter_your_password">enter your password</string>
    <string name="Enter_your_username">enter your username</string>
    <string name="xxx_xxxxxxxxx">xxx-xxxxxxxxx</string>
    <string name="not_a_member_sign_up_now">Not a Member , Sign up now</string>
    <string name="user_name">User name</string>
    <string name="header">header</string>
    <string name="Quizz_Background">quizz_background</string>
    <string name="logout">logout</string>
    <string name="computer_section">computer section</string>
    <string name="it_section">IT section</string>
    <string name="android_section">Android Section</string>
    <string name="java_section">Java section</string>
    <string name="computer_quizz">computer_quizz</string>
    <string name="it_quizz">it_quizz</string>
    <string name="java_quizz">java_quizz</string>
    <string name="android_quizz">android_quizz</string>
    <string name="first_quiz">first_quiz</string>
    <string name="second_quizz">second_quizz</string>
    <string name="forth_quizz">forth_quizz</string>
    <string name="third_quizz">third_quizz</string>
    <string name="image4quizz">image4quizz</string>
    <string name="question">question</string>
    <string name="submit">submit</string>
    <string name="timeAndDate">timeAndDate</string>
    <string name="high_score">High Score :</string>
    <string name="value_of_highscore">value_of_highscore</string>
    <string name="overall_progress">Overall progress :</string>
    <string name="value_high_secure">value_high_secure</string>

    <string name="rest">Rest</string>
    <string name="_100">100</string>
    <string name="_1_5">1/5</string>
    <string name="btn_first_quizz">btn_first_quizz</string>
    <string name="tv_quizList">TextView</string>
    <string name="tv_question">tv_question</string>
    <string name="welcomingAdmin">welcomingAdmin</string>
    <string name="image_admin">image_admin</string>
    <string name="welcomeAdmin">welcomeAdmin</string>
    <string name="powered_by_azzam_85473">powered By: Azzam_85473</string>
    <string name="return_to_quizz_list">return to quizz list</string>
    <string name="back">Back</string>
    <string name="tv_timeAndDate">tv_timeAndDate</string>
    <string name="azzamazezali_gmail_com_963_991576641">Azzamazezali@gmail.com +963-991576641</string>
    <string name="AdminClock"> cadmin</string>
    <string name="logout_Admin">logout</string>
    <string name="quizz_zone">Quizz Zone</string>
    <string name="add_quizz">Add Quizz</string>
    <string name="delete_quizz">DELETE QUIZZ</string>
    <string name="update_quizz">UPDATE QUIZZ</string>
    <string name="user_area">User Area</string>
    <string name="view_result">VIEW RESULT</string>
    <string name="img_add">img_add</string>
    <string name="add_valid_quizz_name">Add Valid Quizz Name :</string>
    <string name="enter_name_of_question_to_add">enter name of question to add</string>
    <string name="button">Button</string>
    <string name="return_home">return home</string>
    <string name="add_quizz_just">Add Quizz</string>
    <string name="del_quizz_just">del_quizz_just</string>
    <string name="enter_name_of_question_to_del">name_of_quiz_to_delete</string>
    <string name="del_valid_quizz_name">del_the_quizz</string>
    <string name="img_del">delete_quiz</string>
    <string name="delete_the_quizz">Delete the Quizz</string>
    <string name="enter_quizz_name_to_delete">enter quizz name to delete</string>
    <string name="delete_a_quizz">delete a quizz</string>
    <string name="update_the_quizz">Update the Quizz</string>
    <string name="enter_the_name_of_quizz_to_update">enter the name of Quizz to update</string>
    <string name="img_update">UpdateTheQuiz</string>
    <string name="entee_name_of_quizz_to_show_the">entee name of quizz to show the</string>


    <string name="user_Zone">User Zone</string>
    <string name="enter_the_new_quizz_name_you_want_to_update">enter the new quizz name you want to update</string>
    <string name="enter_the_name_of_the_quiz_you_want_to_updated">enter the name of the Quiz you want to updated</string>
    <string name="quiz_name_that_will_be_updated">Quiz name that will be updated</string>
    <string name="show_the_result_from_multiple_users">show the result from multiple users</string>
    <string name="show_users_who_made_this_quizz">Show the users who done the quizz</string>
    <string name="numberOfTheUser">Name</string>


</resources>
