<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Quiz">

    <ScrollView
        android:id="@+id/sv_admin_add"
        android:layout_width="368dp"
        android:layout_height="391dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045">

        <LinearLayout
            android:id="@+id/ll_admin_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/img_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.382"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.682"
                app:srcCompat="@drawable/add_quiz" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_valid_quizz_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/ed_quiz_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_name_of_question_to_add"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_add_quizz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="AddTheQuiz"
                android:text="@string/add_quizz_just" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_back_Dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="backToDashBoard"
        android:text="@string/return_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_admin_add"
        app:layout_constraintVertical_bias="0.765" />

    <Switch
        android:id="@+id/sw_logout_admin"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="logout"
        android:text="@string/logout_Admin"
        android:textColor="#ff0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toEndOf="@+id/btn_back_Dashboard"
        app:layout_constraintTop_toBottomOf="@+id/sv_admin_add"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/tv_clockAdd"
        android:layout_width="173dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sw_logout_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_back_Dashboard"
        app:layout_constraintTop_toBottomOf="@+id/sv_admin_add"
        app:layout_constraintVertical_bias="0.581" />

</android.support.constraint.ConstraintLayout>